<resources>
    <string name="app_name">Life Tracker</string>
    <string name="action_settings">Configuración</string>

    <string name="elige_idioma">Elige idioma…</string>
    <string name="espanol">Español</string>
    <string name="ingles">Inglés</string>

    <!-- TITULOS -->

    <string name="principal">Principal</string>
    <string name="agenda">Agenda</string>
    <string name="finanzas">Finanzas</string>
    <string name="comidas">Comidas</string>
    <string name="objetivos">Objetivos</string>
    <string name="extras">Extras</string>
    <string name="compartir">Compartir</string>
    <string name="configuracion">Configuracion</string>


    <string name="estadisticas">Estadísticas</string>
    <string name="historial">Historial</string>
    <string name="monedas">Monedas</string>
    <string name="tags">Etiquetas</string>
    <string name="acceso">Acceso</string>
    <string name="registrarse">Registrarse</string>
    <string name="editar">Editar</string>


    <!-- ACTIVITY -->
    navigation_drawer_close
    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Cerrar</string>
    <!-- LOGIN -->
    <string name="bienvenido">Bienvenido !</string>
    <string name="name">Nombre</string>
    <string name="password">Contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="inicia_sesion">Inicia sesión</string>
    <string name="idioma">Idioma</string>
    <string name="usuario_creado">Usuario creado con éxito !</string>
    <string name="salir">Salir</string>
    <string name="quieres_cerrar_sesion">Quieres cerrar sesión?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="credenciales_incorrectas">Usuario o contraseña incorrectos</string>
    <string name="mantener_sesion">Mantener sesión iniciada</string>

    <!-- FINANZAS -->

    <string name="tu_dinero">Tu dinero</string>
    <string name="tus_monedas">Tus monedas</string>
    <string name="agregar_registro">Agregar registro</string>
    <string name="guardado_exito">Guardado con éxito !</string>
    <string name="editado_exito">Editado con éxito !</string>
    <string name="eliminado_exito">Eliminado con éxito !</string>
    <string name="sin_gastos">No has gastado nada en estos días</string>
    <string name="sin_ingresos">No has tenido un ingreso en estos días</string>
    <string name="sin_info_sobre_tags">No tienes información sobre Etiquetas en estos días</string>
    <string name="sin_registros">No has registrado nada entre éstas fechas</string>
    <string name="sin_tag">Sin etiqueta</string>
    <string name="sin_tags">Aún no tienes etiquetas, crea una</string>
    <string name="sin_tags_seleccionados">No has seleccionado ninguna etiqueta</string>
    <string name="crear_nuevo_tag">Crear nueva etiqueta</string>
    <string name="editar_tag">Editar etiqueta</string>
    <string name="editar_moneda">Editar moneda</string>
    <string name="tag_vacio">No puedes crear una etiqueta vacía</string>
    <string name="moneda_nombre_vacio">No puedes crear una moneda con nombre vacío</string>

    <!-- GASTOS -->
    <string name="gastos">Gastos</string>
    <string name="gastos_por_tags">Gastos por etiquetas</string>
    <string name="gastos_por_mes">Gastos por mes</string>
    <string name="ingresos">Ingresos</string>
    <string name="ingresos_por_tags">Ingresos por etiquetas</string>
    <string name="ingresos_por_mes">Ingresos por mes</string>
    <string name="avanzado">Avanzado</string>
    <string name="stats_avanzados">Estadísticas avanzadas</string>
    <string name="total">Total</string>
    <string name="por_dia">Por día</string>

    <!-- MONEDAS -->
    <string name="moneda">Moneda</string>
    <string name="simbolo">Simbolo</string>
    <string name="cantidad">Cantidad</string>
    <string name="cantidad_inicial">Cantidad inicial</string>
    <string name="example_moneda">Pesos</string>
    <string name="example_simbolo">$</string>

    <!-- ADD RECORD -->
    <string name="fecha_input">Fecha:</string>
    <string name="moneda_input">Moneda:</string>
    <string name="cantidad_input">Cantidad:</string>
    <string name="motivo_input">Motivo:</string>
    <string name="tags_input">Etiquetas:</string>
    <string name="tag...">Etiqueta…</string>
    <string name="nombre...">Nombre…</string>
    <string name="simbolo...">Simbolo…</string>
    <string name="sin_seleccionados">0 seleccionadas</string>
    <string name="seleccionados">seleccionadas</string>
    <string name="es_ingreso">Es ingreso</string>

    <!-- FECHAS -->
    <string name="desde">Desde</string>
    <string name="hasta">Hasta</string>
    <string name="comienzo_de_mes">Comienzo de mes</string>
    <string name="comienzo_de_year">Comienzo de año</string>
    <string name="hace_un_mes">Hace 30 días</string>
    <string name="hoy">Hoy</string>
    <string name="year_input">Año:</string>
    <string name="year">Año</string>
    <string name="mes">Mes</string>
    <string name="time">Hora: </string>

    <!-- COMIDAS -->
    <string name="food_favorites">Tus comidas favoritas</string>
    <string name="add_food">Agregar comida</string>
    <string name="food_description">Descripcion: </string>

    <!-- AGENDA -->
    <string name="current_day_schedule">Estos son tus planes para el día</string>
    <string name="agregar_linea">Agregar linea</string>
    <string name="event">Evento</string>
    <string name="actividad">Actividad</string>
    <string name="fin">Fin</string>
    <string name="tipo">Tipo</string>
    <string name="comienzo">Comienzo</string>
    <string name="importancia">Importancia</string>
    <string name="comentarios">Comentarios</string>
    <string name="previous_day">Día anterior</string>
    <string name="next_day">Día siguiente</string>
    <string name="previous_year">Año anterior</string>
    <string name="next_year">Año siguiente</string>
    <string name="add_hints">Agregar sugerencias</string>
    <string name="hint">Sugerencia</string>
    <string name="slider">Slider</string>



    <!-- ACCIONES -->
    <string name="crea_una_moneda">Crea una moneda</string>
    <string name="crea_una_cuenta">Crea una cuenta</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="crear">Crear</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="eliminar">Eliminar</string>
    <string name="guardar">Guardar</string>
    <string name="estas_seguro">Estás seguro? Los datos borrados no pueden recuperarse</string>
    <string name="estas_seguro_monedas">Estás seguro? Se borraran también todos los registros asociados a ésta moneda</string>
    <string name="estas_seguro_tags">Quieres borrar las etiquetas seleccionadas? Los datos borrados no pueden recuperarse</string>
    <string name="mostrar_publicidad">Mira un anuncio y accede a estadísticas avanzadas !</string>
    <string name="selecciona">Selecciona…</string>


    <!-- ERRORES -->
    <string name="error_guardado">Error al guardar datos</string>
    <string name="error_editado">Error al intentar editar</string>
    <string name="error_eliminado">Error al intentar eliminar</string>
    <string name="error_cantidad_null">Error: Debe ingresar cantidad</string>
    <string name="error_fecha_futura">Error: Fecha superior al día de hoy</string>
    <string name="error_crear_usuario">Error al crear usuario</string>
    <string name="error_usuario_vacio">Error: Debes ingresar un nombre de usuario</string>
    <string name="error_usuario_existente">Error: Éste usuario ya existe</string>
    <string name="error_moneda_existente">Error: Ésta moneda ya existe</string>
    <string name="error_tag_existente">Error: Ésta etiqueta ya existe</string>
    <string name="error_caracter_invalido">Error: Caracter inválido</string>


    <!-- AYUDA -->

    <string name="informacion">Información</string>
    <string name="ayuda_crear_cuenta_1">Como los datos son guardados exclusivamente en tu celular, no podras recuperar contraseña si la olvidas.</string>
    <string name="ayuda_crear_cuenta_2">Puedes crear cuenta sin contraseña (recomendado).</string>
    <string name="ayuda_finanzas_1">En ésta sección puedes ver tu dinero actual y agregar registros sobre gastos o ingresos.</string>
    <string name="ayuda_finanzas_2">Tu dinero se actualizará automáticamente luego de agregar o editar registros.</string>
    <string name="ayuda_tags_1">En ésta sección puedes asignar etiquetas a un registro.</string>
    <string name="ayuda_tags_2">Ésto permitirá clasificar tus gastos e ingresos en la sección \'Estadisticas\'.</string>

</resources>