<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context="mis.finanzas.diarias.Finanzas.CrearMonedaFragment">

    <ImageView
        android:id="@+id/volver"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/abc_vector_test"
        app:layout_constraintBottom_toBottomOf="@+id/titulo"
        app:layout_constraintEnd_toStartOf="@+id/titulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/titulo"
        tools:ignore="PrivateResource" />

    <TextView
        android:id="@+id/titulo"
        style="@style/Titulos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="22dp"
        android:text="@string/monedas"
        android:textAlignment="textStart"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/subtitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tus_monedas"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/layout_monedas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/fondo_blanco_redondeado"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="30dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/frijole"
                    android:gravity="center"
                    android:text="@string/crea_una_moneda"
                    android:textAlignment="center"
                    android:textColor="@color/naranja"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/edit_moneda"
                    android:layout_width="135dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:autofillHints=""
                    android:background="@drawable/fondo_blanco_redondeado"
                    android:hint="@string/example_moneda"
                    android:inputType="text"
                    android:textAlignment="center"
                    android:textColor="@color/almost_black"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.1"
                    app:layout_constraintStart_toEndOf="@+id/txt_moneda"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <EditText
                    android:id="@+id/edit_simbolo"
                    android:layout_width="135dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="30dp"
                    android:autofillHints=""
                    android:background="@drawable/fondo_blanco_redondeado"
                    android:hint="@string/example_simbolo"
                    android:inputType="text"
                    android:textAlignment="center"
                    android:textColor="@color/almost_black"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.1"
                    app:layout_constraintStart_toEndOf="@+id/txt_simbolo"
                    app:layout_constraintTop_toBottomOf="@+id/edit_moneda" />

                <EditText
                    android:id="@+id/edit_cantidad"
                    android:layout_width="135dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="30dp"
                    android:autofillHints=""
                    android:background="@drawable/fondo_blanco_redondeado"
                    android:inputType="number"
                    android:text="0"
                    android:textAlignment="center"
                    android:textColor="@color/almost_black"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.1"
                    app:layout_constraintStart_toEndOf="@+id/txt_cantidad"
                    app:layout_constraintTop_toBottomOf="@+id/edit_simbolo"
                    tools:ignore="LabelFor" />

                <TextView
                    android:id="@+id/txt_moneda"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/moneda"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@+id/edit_moneda"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.25"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/edit_moneda" />

                <TextView
                    android:id="@+id/txt_cantidad"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cantidad_inicial"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@+id/edit_cantidad"
                    app:layout_constraintEnd_toEndOf="@+id/txt_simbolo"
                    app:layout_constraintTop_toTopOf="@+id/edit_cantidad" />

                <TextView
                    android:id="@+id/txt_simbolo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/simbolo"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@+id/edit_simbolo"
                    app:layout_constraintEnd_toEndOf="@+id/txt_moneda"
                    app:layout_constraintTop_toTopOf="@+id/edit_simbolo" />

                <Button
                    android:id="@+id/button_crear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="50dp"
                    android:background="@color/naranja"
                    android:text="@string/crear"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edit_cantidad" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>