<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Acceso.LoginFragment">

    <ImageView
        android:id="@+id/fondo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="-100dp"
        android:layout_marginEnd="-100dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/fondo"
        tools:srcCompat="@drawable/fondo"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/titulo"
        style="@style/Titulos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inicia_sesion"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_de_usuario"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/fondo"
        app:layout_constraintEnd_toEndOf="@+id/titulo"
        app:layout_constraintStart_toStartOf="@+id/titulo"
        app:layout_constraintTop_toBottomOf="@+id/titulo"
        app:layout_constraintVertical_bias="0.15" />

    <EditText
        android:id="@+id/usuario"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/fondo_blanco_redondeado"
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/titulo"
        app:layout_constraintStart_toStartOf="@+id/titulo"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/contrasena"
        app:layout_constraintEnd_toEndOf="@+id/titulo"
        app:layout_constraintStart_toStartOf="@+id/titulo" />

    <EditText
        android:id="@+id/contrasena"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/fondo_blanco_redondeado"
        android:ems="10"
        android:hint="********"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/usuario"
        app:layout_constraintStart_toStartOf="@+id/usuario"
        app:layout_constraintTop_toBottomOf="@+id/usuario" />

    <ImageView
        android:id="@+id/ver_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:src="@android:drawable/ic_menu_view"
        app:layout_constraintBottom_toBottomOf="@+id/contrasena"
        app:layout_constraintStart_toEndOf="@+id/contrasena"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <CheckBox
        android:id="@+id/mantener_sesion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/fondo_blanco_redondeado"
        android:text="@string/mantener_sesion"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/titulo"
        app:layout_constraintStart_toStartOf="@+id/titulo"
        app:layout_constraintTop_toBottomOf="@+id/contrasena" />

    <Button
        android:id="@+id/inicia_sesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/gray_with_border"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/ingresar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/crear_cuenta"
        app:layout_constraintTop_toBottomOf="@+id/mantener_sesion"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/crear_cuenta"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@color/naranja"
        android:text="@string/crear_cuenta"
        app:layout_constraintBottom_toBottomOf="@+id/inicia_sesion"
        app:layout_constraintEnd_toStartOf="@+id/inicia_sesion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/inicia_sesion"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>