<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context="mis.finanzas.diarias.finanzas.fragments.FinanzasPrincipalFragment">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/food_favorites"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/contentLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/fondo_blanco_redondeado"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingStart="30dp"
                android:paddingTop="10dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp" />

            <TextView
                android:id="@+id/add_food"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/frijole"
                android:gravity="center"
                android:text="@string/add_food"
                android:textAlignment="center"
                android:textColor="@color/violeta_comidas"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_fecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fecha_input"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/edit_fecha"
                    android:layout_width="125dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/fondo_blanco_redondeado"
                    android:gravity="center"
                    android:textColor="@color/almost_black"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_food_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/spinner_food_time"
                    android:layout_marginStart="20dp"
                    android:layout_width="125dp"
                    android:layout_height="50dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_motivo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/food_description"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@+id/edit_motivo"
                    app:layout_constraintEnd_toStartOf="@+id/edit_motivo"
                    app:layout_constraintTop_toTopOf="@+id/edit_motivo" />

                <EditText
                    android:id="@+id/edit_motivo"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:autofillHints=""
                    android:background="@drawable/fondo_blanco_redondeado"
                    android:ems="10"
                    android:minHeight="50dp"
                    android:paddingStart="3dp"
                    android:paddingEnd="3dp"
                    android:textAlignment="center"
                    android:textColor="@color/almost_black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/edit_cantidad"
                    app:layout_constraintTop_toBottomOf="@+id/edit_cantidad"
                    tools:ignore="LabelFor" />

            </LinearLayout>


                <Button
                    android:id="@+id/ok"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="50dp"
                    android:background="@drawable/button_celeste"
                    android:text="OK"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/check_ingreso" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>